--- a/app/GreenRoutine/app/src/main/res/layout/activity_data_base.xml
+++ b/app/GreenRoutine/app/src/main/res/layout/activity_data_base.xml
@@ -7,8 +7,10 @@
     tools:context=".DataBaseActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
