--- a/app/GreenRoutine/app/src/main/res/layout/card.xml
+++ b/app/GreenRoutine/app/src/main/res/layout/card.xml
@@ -12,28 +12,28 @@
         android:layout_height="721dp"
         android:layout_margin="3dp">
 
-        <ImageView
+      <!--  <ImageView
             android:id="@+id/pic"
             android:layout_width="80dp"
             android:layout_height="60dp"
             android:padding="1dp"
             app:layout_constraintEnd_toStartOf="@+id/item"
             app:layout_constraintStart_toStartOf="parent" />
-
+        -->
         <TextView
             android:id="@+id/item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ITEM GUY"
-            app:layout_constraintBottom_toTopOf="@+id/description"
-            app:layout_constraintStart_toEndOf="@+id/pic" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/description" />
 
         <TextView
             android:id="@+id/description"
             android:layout_width="46dp"
             android:layout_height="wrap_content"
             android:text="What is item guy?"
-            app:layout_constraintStart_toEndOf="@+id/pic"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/item" />
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
