--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -16,6 +16,8 @@
 
             <ImageView
                 android:id="@+id/pic"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_height="140dp"
                 android:layout_width="wrap_content"
                 android:padding="2dp"
