Changed class structure around, categories page now links to items list, which links to itempage

--- a/app/src/main/res/layout/activity_data_base.xml
+++ b/app/src/main/res/layout/activity_data_base.xml
@@ -7,7 +7,7 @@
     android:clickable="true"
     android:focusable="true"
     android:id="@+id/recyMain"
-    tools:context=".DataBaseActivity">
+    tools:context=".CategoriesPage">
 
 
     <androidx.recyclerview.widget.RecyclerView
