--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:focusable="true"
-    android:id="@+id/recyMainC"
-    tools:context=".CategoriesPage">
+    android:id="@+id/recyMainI"
+    tools:context=".ItemList">
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/my_recycler_view_cats"
+        android:id="@+id/my_recycler_view_items"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
