--- a/app/src/main/res/layout/activity_about_page.xml
+++ b/app/src/main/res/layout/activity_about_page.xml
@@ -60,12 +60,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/mpIssues"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="XXXX Issues"
+        android:text="... Issues"
         app:layout_constraintStart_toEndOf="@+id/mpcommit"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -75,8 +75,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="XXXX Tests"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
+        android:text="... Tests"
+        app:layout_constraintStart_toEndOf="@+id/mpIssues"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
