--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
         android:layout_width="117dp"
         android:layout_height="87dp"
         android:background="@color/colorPrimaryDark"
-        android:onClick="searchNear"
+        android:onClick="test"
         android:text="Search Nearby Facilities"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
