Distingiushed categories and items list

--- a/app/src/main/res/layout/activity_data_base.xml
+++ b/app/src/main/res/layout/activity_data_base.xml
@@ -7,7 +7,7 @@
     android:clickable="true"
     android:focusable="true"
     android:id="@+id/recyMain"
-    tools:context=".CategoriesPage">
+    tools:context=".Cate">
 
 
     <androidx.recyclerview.widget.RecyclerView
