--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".DataBaseActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -15,8 +16,6 @@
 
             <ImageView
                 android:id="@+id/pic"
-                android:clickable="true"
-                android:focusable="true"
                 android:layout_height="140dp"
                 android:layout_width="wrap_content"
                 android:padding="2dp"
