Revert "Revert "Merge branch 'master' into carbon-foot-print""
This reverts commit 4c78f1752b93683893bc062b2cdd51a72378c4f8.

--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DataBaseActivity">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -16,6 +15,8 @@
 
             <ImageView
                 android:id="@+id/pic"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_height="140dp"
                 android:layout_width="wrap_content"
                 android:padding="2dp"
