--- a/app/src/main/res/layout/activity_data_base.xml
+++ b/app/src/main/res/layout/activity_data_base.xml
@@ -4,13 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DataBaseActivity">
+    android:clickable="true"
+    android:focusable="true"
+    android:id="@+id/recyMain"
+    tools:context=".Cate">
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="sendToItemPage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
